KubernetesLabs/Labs/10-Istio/01-demo-services/K8S/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: codewizard
  labels:
    istio-injection: enabled
