KubernetesLabs/Labs/10-Istio/01-demo-services/K8S/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-server
spec:
  progressDeadlineSeconds: 60
  replicas: 1
  selector:
    matchLabels:
      app: proxy-server
  template:
    metadata:
      labels:
        app: proxy-server
        version: v1
    spec:
      containers:
        - name: proxy-server
          image: docker.io/nirgeier/istio-proxy-sample
          imagePullPolicy: Always
          ports:
            - name: web
              protocol: TCP
              containerPort: 5050
          resources:
            limits:
              cpu: 100m
            requests:
              cpu: 100m
