KubernetesLabs/Labs/10-Istio/01-demo-services/K8S/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
spec:
  ports:
    # We use the <protocol>-<suffix> as istion require
    - name: http-web
      port: 80
      protocol: TCP
      targetPort: 5050
  selector:
    app: proxy-server
  type: LoadBalancer
