KubernetesLabs/Labs/10-Istio/01-demo-services/K8S/web-server1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserverv1
spec:
  ports:
    - name: http-web
      port: 80
      protocol: TCP
      targetPort: 5050
  selector:
    app: webserver
    version: v1
